--- a/style.css
+++ b/style.css
@@ -51,11 +51,11 @@ button:hover {
   display: flex;
   flex-wrap: wrap;
   margin: -20px auto;
-  cursor: url(/img/palu1.png), auto;
+  cursor: url(img/palu1.png), auto;
 }
 
 .container:active {
-  cursor: url(/img/palu2.png), auto;
+  cursor: url(img/palu2.png), auto;
 }
 
 .tanah {
@@ -66,7 +66,7 @@ button:hover {
 
 .tanah::after {
   display: block;
-  background: url(/img/tanah.png) bottom center no-repeat;
+  background: url(img/tanah.png) bottom center no-repeat;
   background-size: contain;
   content: '';
   width: 100%;
@@ -77,7 +77,7 @@ button:hover {
 }
 
 .tikus {
-  background: url(/img/tikus.png) bottom center no-repeat;
+  background: url(img/tikus.png) bottom center no-repeat;
   background-size: 60%;
   position: absolute;
   top: 100%;
